--- a/style.css
+++ b/style.css
@@ -7,3 +7,80 @@
 p{
     font-size: 20px;
 }
+
+.p70{
+    width: 70%;
+}
+
+.p70jobbra{
+    width: 70%;
+    margin-left: auto;
+    margin-right: 0;
+}
+
+.p70kozep{
+    width: 70;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.p50{
+    width: 50%;
+}
+
+.p50jobbra{
+    width: 50%;
+    margin-left: auto;
+    margin-right: 0;
+}
+
+.p50kozep{
+    width: 50;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* */
+
+.w50{
+    width: 50%;
+}
+
+.w70{
+    width: 70%;
+}
+
+.pjobb{
+    margin-left: auto;
+    margin-right: 0;
+}
+
+.pkozep{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* */
+
+.psarok3{
+    border-radius: 3px;
+}
+.psarok5{
+    border-radius: 5px;
+}
+
+.psarok10{
+    border-radius: 10px;
+}
+
+.bkek{
+    border-color: blue;
+}
+
+.bpiros{
+    border-color: red;
+}
+
+.bzold{
+    border-color: green;
+}
